SERVER-60468 Check that replication is not shutting down before using _initialSyncer in _initialSyncerCompletionFunction